Bug 399961 GetCellAt returning invalid element for partially visible cells r=enn sr=roc a=schrep